<resources>
    <string name="app_name">GimoApp</string>
    <string name="welcome">Miło nam Ciebie gościć!</string>
    <string name="signIn_policy">Do zalogowania będzie potrzebne:\n -hasło\n- Twoje imię i nazwisko\n- Data wymeldowania</string>


    <string name="signIn_text">Zaloguj się</string>
    <string name="getPassword">Zgłoś problem</string>
    <string name="e_g">e.g</string>
    <string name="id_rezerwacji">ID rezerwacji</string>
    <string name="title_activity_start">StartActivity</string>

    <string name="move_back">Powrót</string>

    <string name="sign_in_text_info">Podaj potrzebne informacje:</string>
    <string name="name_text">Imie</string>
    <string name="surname_text">Nazwisko</string>
    <string name="check_out_date_text">Data wymeldowania</string>


    <!--    progressActionBar-->
    <string name="please_wait">Proszę czekać...</string>
</resources>