<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activities.SignInActivity">

    <ImageView
        android:id="@+id/logo_view"
        android:layout_width="match_parent"
        android:scaleType="centerInside"
        android:layout_height="@dimen/intro_screen_logo_height"
        android:src="@drawable/logo"
        android:layout_margin="@dimen/logo_intro_screen_margins"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@null"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:alpha="0.3"
        android:background="@drawable/opatowska"
        android:contentDescription="@null"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_view"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_btn"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="@id/logo_view"
        app:layout_constraintEnd_toEndOf="@id/logo_view"
        app:layout_constraintTop_toBottomOf="@id/logo_view">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/arrow_back_image_signIn"
                android:foreground="?attr/selectableItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_arrow"
                android:layout_marginStart="@dimen/padding_btn"
                android:contentDescription="@null"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/arrow_padding"
                android:text="@string/signIn_text"
                android:textColor="@color/pinkLogo"
                android:textSize="@dimen/normal_text_size"/>
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/signIn_instr_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/pinkLogo"
            android:textSize="@dimen/big_text_size"
            android:text="Logowanie"
            android:textStyle="bold"

            app:layout_constraintTop_toBottomOf="@id/appBarLayout"
            app:layout_constraintStart_toStartOf="@id/logo_view"
            app:layout_constraintEnd_toEndOf="@id/logo_view"
            android:layout_marginTop="@dimen/margin_top_text_signInActivity"
            />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_signInActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_btn"
            android:elevation="@dimen/elevation_for_cardView_signInActivity"
            app:cardCornerRadius="@dimen/button_radius"
            android:background="@drawable/shaped_button_white"

            app:layout_constraintStart_toStartOf="@id/logo_view"
            app:layout_constraintEnd_toEndOf="@id/logo_view"
            app:layout_constraintTop_toBottomOf="@id/signIn_instr_text">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shaped_button_white"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_btn">

                    <TextView
                        android:id="@+id/sign_in_introduction_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/pinkLogo"
                        android:textSize="@dimen/big_text_size"
                        android:text="@string/sign_in_text_info"
                        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
                        app:layout_constraintStart_toStartOf="@id/logo_view"
                        app:layout_constraintEnd_toEndOf="@id/logo_view"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/editText_signIn_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name_text"
                            android:inputType="text"
                            android:textSize="@dimen/normal_text_size"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/editText_signIn_surname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/surname_text"
                            android:inputType="text"
                            android:textSize="@dimen/normal_text_size"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/editText_signIn_"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/check_out_date_text"
                            android:inputType="datetime"
                            android:textSize="@dimen/normal_text_size"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <Button
                        android:id="@+id/getPassword_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="25dp"
                        android:layout_marginStart="@dimen/margin_btn"
                        android:layout_marginEnd="@dimen/margin_btn"
                        android:paddingTop="@dimen/padding_btn"
                        android:paddingBottom="@dimen/padding_btn"
                        android:background="@drawable/shape_button_rounded"
                        android:foreground="?attr/selectableItemBackground"
                        android:text="@string/signIn_text"
                        android:textColor="@color/white"
                        android:textSize="@dimen/normal_text_size"/>
                </LinearLayout>
        </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>